# bluetube

./: .gitignore  CONTRIBUTING.md  README.md  bluetoothclient.py  bluetube  bluetube.cfg  bluetube.py  bluetube.uxf  bt_config.template  completion.sh  dependencies-dev.txt  dependencies.txt  feeds.py  install.sh  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: main.yml
bluetube/: __init__.py  app.py  bcolors.py  bluetoothclient.py  bluetube.py  bt3_config.tmplt  cli.py  commandexecutor.py  componentfactory.py  configs.py  configs.toml  converter.py  eventpublisher.py  feeds.py  model.py  profiles.py  profiles.toml  utils.py  ytdldownloader.py
bluetube/cli/: __init__.py  bcolors.py  cli.py  events.py  inputer.py  outputer.py
cgi_scripts/: index.html  index.py  style.css
tests/: bluetooth.cfg  bluetube_runner.py  configs.toml  fake_db.py  fake_profiles.py  profiles.toml  test_bluetube.py  test_cli.py  test_componentfactory.py  test_configs.py  test_old.py  test_profiles.py  update_db.py
